--- a/grantcreates.css
+++ b/grantcreates.css
@@ -4,6 +4,7 @@
 
 body{
     height: 1000px;
+    margin: 0;
 }
 
 /* ==================GRID======================= */
@@ -21,17 +22,22 @@ body{
     min-height: 1px;
 }
 
+.row::after{
+    content:'';
+    clear: both;
+    display: block;
+}
+
 .col-1{width: 16.666%;}
 .col-2{width: 33.333%;}
 .col-3{width: 50%;}
 .col-6{width: 100%;}
 
+/* ----------------------------GRID mobile------------------------------------ */
+
 @media (max-width: 1024px){
    
     .col-1{width: 33.333%;}
-    .col-2{width: 100%;}
-    .col-3{width: 100%;}
-    .col-6{width: 100%;}
 }
 
 @media (max-width: 768px){
@@ -39,8 +45,103 @@ body{
     .col-1{width: 50%;}
     .col-2{width: 100%;}
     .col-3{width: 100%;}
-    .col-6{width: 100%;}
+}
+
+@media (max-width: 480px){
+   
+    .col-1{width: 100%;}
+    .col-2{width: 100%;}
+    .col-3{width: 100%;}
 }
 
 
+
 /* ====================NAV========================== */
+
+.header-nav{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    position: relative;
+}
+
+/* ----------------------NAV logo---------------------- */
+.nav-logo{
+    left: 5%;
+    position: absolute;
+    margin: 0;
+    display: inline-block;
+}
+
+.logo-static{
+    height: 30px;
+    width: auto;
+    position: absolute;
+    top: 1rem;
+}
+
+@keyframes type{
+    from {opacity: 1}
+    to {opacity: 0}
+}
+
+.logo-animate{
+    height: 35.76px;
+    width: auto;
+    position: absolute;
+    left: 71px;
+    top: 0.35rem;
+}
+
+.nav-logo:hover>.logo-animate{
+    animation-name: type;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+}
+
+/* -----------------------NAV contact----------------------- */
+
+.contact{
+    right: 5%;
+    top: 1.1rem;
+    color: white;
+    position: absolute;
+    font-family: 'Cutive Mono', monospace;
+    cursor: default;
+}
+
+.email-phone{
+    background-color: white;
+    border-bottom: solid black 1px;
+    /* border-right: solid black 1px; */
+    border-left: solid black 1px;
+    font-family: 'Cutive Mono', monospace;
+    top: 50px;
+    right: 0;
+    width: 20%;
+    font-size: 80%;
+    display: none;
+    float: right;
+    text-align: center;
+    position: absolute;
+}
+
+.contact:hover ~ .email-phone{
+    display: inline-block;
+}
+
+/* -----------------------------NAV mobile--------------------------------- */
+
+
+@media (max-width: 768px){
+   
+    .email-phone{width: 50%;}
+    
+}
+
+@media (max-width: 480px){
+   
+    .email-phone{width: 100%;}
+    
+}
+
