--- a/grantcreates.css
+++ b/grantcreates.css
@@ -9,12 +9,17 @@ body{
 
 /* ==================GRID======================= */
 
-
 .container{
     width: 95%;
     margin-left: auto;
     margin-right: auto;
     height: 600px;
+    display: grid;
+}
+
+.row{
+    width: 100%;
+    height: 200px;
 }
 
 [class*="col-"]{
@@ -32,6 +37,7 @@ body{
 .col-2{width: 33.333%;}
 .col-3{width: 50%;}
 .col-6{width: 100%;}
+.col-custom{width: 66.666%}
 
 /* ----------------------------GRID mobile------------------------------------ */
 
@@ -184,8 +190,59 @@ header{
     }
 }
 
+
+/* ===================================PROJECTS=========================================== */
+
+.projects{
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+
+
+
 /* ================================SELECTOR=========================================== */
 
 .selector{
-
+    background-color: black;
+    width: 95%;
+    height: 500px;
+    border-radius: 25px;
 }
+
+.left{
+    float: left;
+    position: relative;
+}
+
+.right{
+    float: right;
+    position: relative;
+}
+
+.showcase{
+    background-color: black;
+    width: 100%;
+    height: 250px;
+    border-radius: 25px;
+    float: center;
+}
+
+/* ---------------------------------SELECTOR mobile-------------------------------------- */
+
+/* @media (max-width: 768px){
+    header{
+        background-color: black;
+        color: white;
+    }
+}
+
+@media (max-width: 480px){
+    header{
+        background-color: black;
+        color: white;
+    }
+} */
+
+
+
+
