--- a/grantcreates.css
+++ b/grantcreates.css
@@ -41,10 +41,10 @@ body{
 
 /* ----------------------------GRID mobile------------------------------------ */
 
-@media (max-width: 1024px){
+/* @media (max-width: 1024px){
    
     .col-1{width: 33.333%;}
-}
+} */
 
 @media (max-width: 768px){
    
@@ -198,34 +198,42 @@ header{
 }
 
 
+/* ====================================GAME(nimmt den Platz von Projekten bis ich sie fertigen)=================================================== */
+
+.game{
+    width: 100%;
+    background: black;
+    height: 300px;
+    border-radius: 25px;
+}
 
 
 /* ================================SELECTOR=========================================== */
 
-.selector{
-    background-color: black;
-    width: 95%;
-    height: 500px;
-    border-radius: 25px;
+/* .selector{
+background-color: black;
+width: 95%;
+height: 500px;
+border-radius: 25px;
 }
 
 .left{
-    float: left;
-    position: relative;
+float: left;
+position: relative;
 }
 
 .right{
-    float: right;
-    position: relative;
+float: right;
+position: relative;
 }
 
 .showcase{
-    background-color: black;
-    width: 100%;
-    height: 250px;
-    border-radius: 25px;
-    float: center;
-}
+background-color: black;
+width: 100%;
+height: 250px;
+border-radius: 25px;
+float: center;
+} */
 
 /* ---------------------------------SELECTOR mobile-------------------------------------- */
 
