spaceinvaders enemies can now shoot. trying to move side 2 side.

--- a/spaceinvaders.css
+++ b/spaceinvaders.css
@@ -52,3 +52,10 @@
     width: 1200px;
     position: absolute;
 }
+
+/* #enemies {
+    height: 800px;
+    width: 1200px;
+    position: absolute;
+    top: 100px;
+} */
