--- a/grantcreates.css
+++ b/grantcreates.css
@@ -13,8 +13,7 @@ body{
     width: 95%;
     margin-left: auto;
     margin-right: auto;
-    height: 600px;
-    display: grid;
+    height: 50vw;
 }
 
 .row{
