--- a/grantcreates.css
+++ b/grantcreates.css
@@ -212,6 +212,7 @@ body{
 
 @media(max-width: 1024px){
     .bio{
+        top: 45px;
         background-color: black;
         color: white;
         padding-top: 15px;
@@ -223,6 +224,7 @@ body{
 
 @media (max-width: 768px){
     .bio{
+        top: 45px;
         background-color: black;
         color: white;
         padding-top: 15px;
@@ -232,6 +234,7 @@ body{
 
 @media (max-width: 480px){
     .bio{
+        top: 45px;
         background-color: black;
         color: white;
         padding-top: 15px;
@@ -242,6 +245,7 @@ body{
 @media (max-width: 375px){
     .bio{
         background-color: black;
+        top: 45px;
         color: white;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -276,6 +280,8 @@ body{
     font-size: 15px;
     display: none;
     pointer-events: none;
+    top: 25px;
+    position: relative;
 }
 
 /* ----------------------------------------KEYS keys------------------------------------ */
@@ -356,7 +362,6 @@ body{
 
 .beat{
     position: block;
-    /* border: 1px solid white; */
     height: 95%;
     width: 95%;
     background-color: white;
@@ -382,6 +387,7 @@ body{
     .drum-kit{
         width: 600px;
         height: 600px;
+        top: 20px;
         
     }
 }
@@ -390,6 +396,8 @@ body{
     .drum-kit{
         width: 600px;
         height: 600px;
+        top: 20px;
+
     }
 }
 
@@ -397,6 +405,8 @@ body{
     .drum-kit{
         width: 325px;
         height: 325px;
+        top: 20px;
+
     }
 }
 
@@ -405,5 +415,7 @@ body{
     .drum-kit{
         width: 275px;
         height: 275px;
+        top: 20px;
+
     }
 }
